--- a/database-core/build.gradle
+++ b/database-core/build.gradle
@@ -1,3 +1,5 @@
+
 dependencies {
-    compile 'mysql:mysql-connector-java:5.1.41'
+    compile "org.slf4j:jcl-over-slf4j:1.7.25"
+    compile "ch.qos.logback:logback-classic:1.2.3"
 }
