--- a/database-core/build.gradle
+++ b/database-core/build.gradle
@@ -2,4 +2,5 @@
 dependencies {
     compile "org.slf4j:jcl-over-slf4j:1.7.25"
     compile "ch.qos.logback:logback-classic:1.2.3"
+    compile project(":database-common")
 }
