--- a/database-gui/build.gradle
+++ b/database-gui/build.gradle
@@ -5,6 +5,7 @@ version '1.0-SNAPSHOT'
 mainClassName = 'com.jean.database.gui.MainApplication'
 
 dependencies {
+    compile project(":database-common")
     compile project(":database-core")
     compile project(":database-mysql")
     compile project(":database-oracle")
