--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'database-util'
+include 'database-common'
 include 'database-core'
 include 'database-gui'
 include 'database-mysql'
