增加功能，优化代码

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,15 @@
 *.pid
 /out/
 
+database-*/.idea
+database-*/.idea/
+database-*/*.iws
+database-*/*.iml
+database-*/*.ipr
+database-*/*.pid
+database-*/out/
+database-*/build/
+
 ### NetBeans ###
 /nbproject/private/
 /build/
