--- a/database-mysql/build.gradle
+++ b/database-mysql/build.gradle
@@ -1,8 +1,10 @@
 dependencies {
-    implementation 'mysql:mysql-connector-java:5.1.41'
-//    implementation 'com.zaxxer:HikariCP:3.4.5'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
+
 //    implementation 'org.apache.calcite:calcite-core:1.23.0'
-    implementation 'com.alibaba:druid:1.1.23'
+//    implementation 'com.alibaba:druid:1.2.17'
+    implementation 'com.mysql:mysql-connector-j:8.0.32'
+
 
     implementation project(":database-sql")
     implementation project(":database-api")
