--- a/database-mysql/build.gradle
+++ b/database-mysql/build.gradle
@@ -1,10 +1,10 @@
 dependencies {
-    compile 'mysql:mysql-connector-java:5.1.41'
-//    compile 'com.zaxxer:HikariCP:3.4.5'
-//    compile 'org.apache.calcite:calcite-core:1.23.0'
-    compile 'com.alibaba:druid:1.1.23'
+    implementation  'mysql:mysql-connector-java:5.1.41'
+//    implementation  'com.zaxxer:HikariCP:3.4.5'
+//    implementation  'org.apache.calcite:calcite-core:1.23.0'
+    implementation  'com.alibaba:druid:1.1.23'
 
-    compile project(":database-sql")
+    implementation  project(":database-sql")
     compileOnly project(":database-api")
 
 }
