--- a/database-oracle/build.gradle
+++ b/database-oracle/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    compile 'mysql:mysql-connector-java:5.1.41'
-    compile project(":database-sql")
+    implementation  'mysql:mysql-connector-java:5.1.41'
+    implementation  project(":database-sql")
     compileOnly project(":database-api")
 
 }
