--- a/database-redis/build.gradle
+++ b/database-redis/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile 'io.lettuce:lettuce-core:5.1.2.RELEASE'
-    compile "org.apache.commons:commons-pool2:2.6.0"
+    implementation  'io.lettuce:lettuce-core:6.2.3.RELEASE'
+    implementation  "org.apache.commons:commons-pool2:2.6.0"
     compileOnly project(":database-api")
 }
